--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Clown Down</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
     <script src="app.js" type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
+
 </head>
 <body>
-  <div class="clown" id="target1">1</div>
-  <div class="clown" id="target2">2</div>
-  <div class="clown" id="target3">3</div>
-  <div class="clown" id="target4">4</div>
-  <div class="clown" id="target5">5</div>
+<h1>CLOWN&#9830;DOWN <span> 0/13</span></h1>
+
+
+<div id="flex-container1">
+
+  <div class="clown" id="target1"></div>
+  <div class="clown" id="target2"></div>
+  <div class="clown" id="target3"></div>
+  <div class="clown" id="target4"></div>
+</div>
+
+<div id="flex-container2">
+  <div class="clown" id="target5"></div>
+  <div class="clown" id="target6"></div>
+  <div class="clown" id="target7"></div>
+  <div class="clown" id="target8"></div>
+  <div class="clown" id="target9"></div>
+  <div class="clown" id="target10"></div>
+</div>
+
+<div id="flex-container3">
+  <div class="clown" id="target11"></div>
+  <div class="clown" id="target12"></div>
+  <div class="clown" id="target13"></div>
+</div>
 
 </body>
 </html>
