--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<h1>CLOWN&#9830;DOWN <span>0</span></h1>
+<h1><span id="clock"> 10</span> CLOWN&#9830;DOWN<span id="score">0</span></h1>
 
 
 <div id="flex-container1">
