--- a/landing.html
+++ b/landing.html
@@ -6,8 +6,8 @@
   <title>Clown Down Log-In</title>
     <link rel="stylesheet" type="text/css" href="landingstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
-    <script src="app.js" type="text/javascript"></script>
-    <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
+<!--     <script src="app.js" type="text/javascript"></script>
+ -->    <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
   <h1>COME ONE COME ALL!</h1>
 
 
-    <input type="text" name="userNameField" value="" placeholder="Create Your User Name Here " id="enterInfo" required>
+    <input type="text" name="userNameField" value="" placeholder="Enter Your Name" id="enterInfo" required>
 
     <input type="submit" name="submitInfo" value="Let's Play!" id="submitInfo">
 
