home button added to game page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   <div class="clown" id="target11"></div>
   <div class="clown" id="target12"></div>
   <div class="clown" id="target13"></div>
+
 </div>
+ <a href="landing.html">Home</a>
 
 </body>
 </html>
