--- a/index.html
+++ b/index.html
@@ -3,42 +3,26 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Clown Down</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Clown Down Log-In</title>
+    <link rel="stylesheet" type="text/css" href="landingstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
-    <script src="app.js" type="text/javascript"></script>
-    <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
-
+<!--     <script src="app.js" type="text/javascript"></script>
+ -->    <link href="https://fonts.googleapis.com/css?family=Rye" rel="stylesheet">
 </head>
 <body>
-<h1><span id="clock"> 30</span> CLOWN&#9830;DOWN<span id="score">0</span></h1>
 
 
-<div id="flex-container1">
+<div id="userNameLogin">
+  <form action="gamepage.html" method="get" accept-charset="utf-8">
+  <h1>COME ONE COME ALL!</h1>
 
-  <div class="clown" id="target1"></div>
-  <div class="clown" id="target2"></div>
-  <div class="clown" id="target3"></div>
-  <div class="clown" id="target4"></div>
+
+    <input type="text" name="userNameField" value="" placeholder="Enter Your Name" id="enterInfo" required>
+
+    <input type="submit" name="submitInfo" value="Let's Play!" id="submitInfo">
+
+  </form>
 </div>
-
-<div id="flex-container2">
-  <div class="clown" id="target5"></div>
-  <div class="clown" id="target6"></div>
-  <div class="clown" id="target7"></div>
-  <div class="clown" id="target8"></div>
-  <div class="clown" id="target9"></div>
-  <div class="clown" id="target10"></div>
-</div>
-
-<div id="flex-container3">
-  <div class="clown" id="target11"></div>
-  <div class="clown" id="target12"></div>
-  <div class="clown" id="target13"></div>
-
-</div>
- <a href="landing.html">Home</a>
 
 </body>
 </html>
-
